[package]
name = "color_conv"
version = "0.2.1"
authors = ["Safin Singh <safin.singh@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "A color conversion library for Rust"
repository = "https://github.com/safinsingh/color_conv"
keywords = ["color", "rgb", "hex", "cmyk", "hsl"]

[dependencies]
thiserror = "1.0.24"

[dev-dependencies]
anyhow = "1.0.38"
rustyline = "7.1.0"
