[package]
name = "color_conv"
version = "0.2.1"
authors = ["Safin Singh <safin.singh@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "A color conversion library for Rust"
repository = "https://github.com/safinsingh/color_conv"
keywords = ["color", "rgb", "hex", "cmyk", "hsl"]

[dependencies]
thiserror = { version = "1.0", optional = true }
num-traits = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
anyhow = "1.0.38"
rustyline = "7.1.0"

[features]
default = ["std"]

# Uses the standard library
std = ["thiserror"]

# Enables no_std compatibility
no_std = ["num-traits", "num-traits/libm"]

# Uses f32 instead of f64 for floating point operations
f32 = []